<resources>
    <string name="app_name">ProjectMX</string>
    <string name="Forget_Password"><a href="#">Forget Password?</a></string>
    <string name="Sign_up">New user?<a href="">Register</a></string>
    <string name="Login">Already have an account?<a href="">Login</a></string>
    <string name="terms_conditions">I agree to <a href="">terms &amp; conditions.</a></string>
    <string-array name="test_types">
        <item>Academic</item>
        <item>General</item>
    </string-array>
    <string-array name="gender_options">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string name="introductionQuestion">Tell me something about your hometown.</string>
    <string name="questionNumber">Question 1</string>
    <string name="cueCard">Describe a hobby.</string>
    <string name="discussion">Advantages of internet.</string>
    <string name="start_recording">Start Recording</string>
    <string name="stop_recording">Stop Recording</string>
    <string name="loading_question">Loading Question</string>
    <string name="wait_for_question">Wait for Question</string>
    <string name="barGraphQuestion">Question...</string>
    <string name="lineChartQuestion">Question...</string>
    <string name="piechartQuestion">Question...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="loading">Loading...</string>
    <string name="view_question">View Question</string>
    <string name="view_passage">View Passage</string>
    <string name="loading_data">Loading Data</string>
    <string name="passage_title">Passage Title</string>
    <string name="passage_content_goes_here">Passage content goes here</string>
    <string name="question_with_space">Question</string>
    <string name="question_number">Question 1</string>
    <string name="question_text">Question Text</string>
    <string name="your_answer">Your Answer</string>
    <string name="false_">False</string>
    <string name="true_">True</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_given">Not Given</string>
    <string name="check_result">Check Result</string>
    <string name="play_audio">Play Audio</string>
    <string name="section_number">Section Number</string>
    <string name="next_section">next_section</string>
    <string name="previous_section">Previous Section</string>
    <string name="section_context">Section Context</string>
</resources>