<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_number"/>

    <TextView
        android:id="@+id/tv_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_text"/>

    <EditText
        android:id="@+id/et_user_answer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/your_answer"/>
</LinearLayout>
