<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/tv_question_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_question_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/rg_true_false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rb_true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/true_"/>

        <RadioButton
            android:id="@+id/rb_false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/false_"/>

        <RadioButton
            android:id="@+id/rb_not_given"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_given"/>
    </RadioGroup>
</LinearLayout>