<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListeningSectionFragment">

        <TextView
            android:id="@+id/section_number_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_number"
            android:textStyle="bold"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/section_context_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/section_context"
            android:textSize="18sp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

                <Button style="@style/MaterialAlertDialog.MaterialComponents.Title.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/section_play_audio"
                    android:text="@string/play_audio"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/section_questions_recycler_view"
            />

</LinearLayout>